[package]
name = "tokio_file_io"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
log = "0.4"
simple_logger = "5"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
egui = "0.33"
fmt = "0.1"
regex = "1"
